--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.md
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_19.md
@@ -84,12 +84,12 @@
   <tr>
     <td><a href="../../../requirements/astm/f3411/v19.md">DSS0110</a></td>
     <td>Implemented</td>
-    <td><a href="../../../scenarios/astm/netrid/v19/dss/crdb_access.md">ASTM NetRID DSS: Direct CRDB access</a></td>
+    <td><a href="../../../scenarios/astm/netrid/v19/dss/datastore_access.md">ASTM NetRID DSS: Direct datastore access</a></td>
   </tr>
   <tr>
     <td><a href="../../../requirements/astm/f3411/v19.md">DSS0120</a></td>
     <td>Implemented</td>
-    <td><a href="../../../scenarios/astm/netrid/v19/dss/crdb_access.md">ASTM NetRID DSS: Direct CRDB access</a></td>
+    <td><a href="../../../scenarios/astm/netrid/v19/dss/datastore_access.md">ASTM NetRID DSS: Direct datastore access</a></td>
   </tr>
   <tr>
     <td><a href="../../../requirements/astm/f3411/v19.md">DSS0130,1</a></td>
